--- a/litecoin.ipynb
+++ b/litecoin.ipynb
@@ -85,34 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57c3f26773ef481287a00a1b1fb7ec66",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=150478), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "This operation took 864.24 min\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def construct_clusters(df):\n",
     "    clusters = []\n",
@@ -134,7 +111,7 @@
     "    start = time.time()\n",
     "    df.groupby('tx_hash').progress_apply(cluster)\n",
     "    end = time.time()\n",
-    "    print(f'This operation took {round((end-start) / 60, 2)} min')\n",
+    "    print(f'This operation took {round((end-start) / 3600, 2)} hr.')\n",
     "    return clusters\n",
     "# clusters = construct_clusters(df)"
    ]
@@ -154,7 +131,7 @@
     "def unpicklify(filename):\n",
     "    with open(filename, 'rb') as file:\n",
     "        return pickle.load(file)\n",
-    "# unpicklify('clusters.pickle')"
+    "clusters = unpicklify('clusters.pickle')"
    ]
   },
   {
@@ -195,6 +172,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
