added Coinbase exchange cluster

--- a/litecoin.ipynb
+++ b/litecoin.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Labeled 18.47% of the data.\n"
+      "Labeled 18.49% of the data.\n"
      ]
     }
    ],
@@ -283,6 +283,7 @@
     "add_label('LKeCCvMavn8bawyeyEhLkwjBM6SJZHGh69', 'GAMBLING', '999Dice')\n",
     "\n",
     "add_label('MMfrXgS3j1mwD87BPZtkGEhnHRDXZN2pHh', 'EXCHANGE', 'Coinone')\n",
+    "add_label('LddFLSodo495K4C8AbDbt3kLQ2E19DDyzt', 'EXCHANGE', 'Coinbase')\n",
     "# clusters.to_csv('clusters.csv', index=False)\n",
     "\n",
     "\n",
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -424,7 +425,7 @@
        "[129 rows x 4 columns]"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -470,39 +471,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>67191</td>\n",
-       "      <td>MNNCKxFHyXd4HkwJz1iEeQUDaqAS1ePQKG</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70319</td>\n",
+       "      <td>LP1NaZDCBZY6CXpRJxG4FiJMffsrhoSHLY</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67192</td>\n",
-       "      <td>nonstandardb53a0a2229aeafd045298c667060c7c6761...</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70320</td>\n",
+       "      <td>ME4TbvxRF8fzHQpDQjcvniEi3diL2xB4bv</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67193</td>\n",
-       "      <td>MQYa6dgVX6dCtUT6SSU83fnuc351YJScfq</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70321</td>\n",
+       "      <td>MEpNmqapuJfe7iVkQPaTqhWBRXkv67mWKN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67194</td>\n",
-       "      <td>MCAJoR3iAG7vbZYg4rB3RzjgYf5KGBjeET</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70322</td>\n",
+       "      <td>MDsF4Tt3RVpPmJbYYMPK8kBiqcARog2CtP</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67195</td>\n",
-       "      <td>nonstandard57b535fd55819c572fa216afa9d94b3dc5f...</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70323</td>\n",
+       "      <td>LhfZ1vin2yfyCBSbbghyRPZgpanR8wCG8S</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -512,76 +513,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67373</td>\n",
-       "      <td>MWQbVR5AkPBYvjWhThR3pki253wghiatQ4</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70443</td>\n",
+       "      <td>MEr7qSy8kKNcLgyahQ3svFzB4FeKCqUrBn</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67374</td>\n",
-       "      <td>MVd33zbn21Ak6DRLzamWgNNiLRHhvaYv6W</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70444</td>\n",
+       "      <td>MM666HK6mFfPrWj2xkeGQa2crpR6vfbmgU</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67375</td>\n",
-       "      <td>nonstandardd6ab37df796f01b251e37edd5aac8066279...</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70445</td>\n",
+       "      <td>MSMrpMnQV9Zk5q1pFUWxoJcdLij4o6FK5Q</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67376</td>\n",
-       "      <td>nonstandard750f3853cc20e161294f73a998fc461bf07...</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70446</td>\n",
+       "      <td>MEMpYkP514wDnMpPz4m1MYpjvPnofnSSTx</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>67377</td>\n",
-       "      <td>MFTiB5NV8cyLXuDwdX9i7gQGmgeSoAmm1E</td>\n",
-       "      <td>80</td>\n",
-       "      <td>MINING</td>\n",
-       "      <td>LitecoinPool.org</td>\n",
+       "      <td>70447</td>\n",
+       "      <td>Lbm3WHPCQnAhDSxhdTB182jvU4pH88G18g</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>187 rows × 4 columns</p>\n",
+       "<p>129 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    addr  cluster_id   label  \\\n",
-       "67191                 MNNCKxFHyXd4HkwJz1iEeQUDaqAS1ePQKG          80  MINING   \n",
-       "67192  nonstandardb53a0a2229aeafd045298c667060c7c6761...          80  MINING   \n",
-       "67193                 MQYa6dgVX6dCtUT6SSU83fnuc351YJScfq          80  MINING   \n",
-       "67194                 MCAJoR3iAG7vbZYg4rB3RzjgYf5KGBjeET          80  MINING   \n",
-       "67195  nonstandard57b535fd55819c572fa216afa9d94b3dc5f...          80  MINING   \n",
-       "...                                                  ...         ...     ...   \n",
-       "67373                 MWQbVR5AkPBYvjWhThR3pki253wghiatQ4          80  MINING   \n",
-       "67374                 MVd33zbn21Ak6DRLzamWgNNiLRHhvaYv6W          80  MINING   \n",
-       "67375  nonstandardd6ab37df796f01b251e37edd5aac8066279...          80  MINING   \n",
-       "67376  nonstandard750f3853cc20e161294f73a998fc461bf07...          80  MINING   \n",
-       "67377                 MFTiB5NV8cyLXuDwdX9i7gQGmgeSoAmm1E          80  MINING   \n",
+       "                                     addr  cluster_id label entity\n",
+       "70319  LP1NaZDCBZY6CXpRJxG4FiJMffsrhoSHLY         100   NaN    NaN\n",
+       "70320  ME4TbvxRF8fzHQpDQjcvniEi3diL2xB4bv         100   NaN    NaN\n",
+       "70321  MEpNmqapuJfe7iVkQPaTqhWBRXkv67mWKN         100   NaN    NaN\n",
+       "70322  MDsF4Tt3RVpPmJbYYMPK8kBiqcARog2CtP         100   NaN    NaN\n",
+       "70323  LhfZ1vin2yfyCBSbbghyRPZgpanR8wCG8S         100   NaN    NaN\n",
+       "...                                   ...         ...   ...    ...\n",
+       "70443  MEr7qSy8kKNcLgyahQ3svFzB4FeKCqUrBn         100   NaN    NaN\n",
+       "70444  MM666HK6mFfPrWj2xkeGQa2crpR6vfbmgU         100   NaN    NaN\n",
+       "70445  MSMrpMnQV9Zk5q1pFUWxoJcdLij4o6FK5Q         100   NaN    NaN\n",
+       "70446  MEMpYkP514wDnMpPz4m1MYpjvPnofnSSTx         100   NaN    NaN\n",
+       "70447  Lbm3WHPCQnAhDSxhdTB182jvU4pH88G18g         100   NaN    NaN\n",
        "\n",
-       "                 entity  \n",
-       "67191  LitecoinPool.org  \n",
-       "67192  LitecoinPool.org  \n",
-       "67193  LitecoinPool.org  \n",
-       "67194  LitecoinPool.org  \n",
-       "67195  LitecoinPool.org  \n",
-       "...                 ...  \n",
-       "67373  LitecoinPool.org  \n",
-       "67374  LitecoinPool.org  \n",
-       "67375  LitecoinPool.org  \n",
-       "67376  LitecoinPool.org  \n",
-       "67377  LitecoinPool.org  \n",
-       "\n",
-       "[187 rows x 4 columns]"
+       "[129 rows x 4 columns]"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,12 +579,12 @@
     "    cluster_id = clusters[clusters['addr'] == addr]['cluster_id'].values[0]\n",
     "    return cluster_by_id(cluster_id)\n",
     "\n",
-    "cluster_by_addr('LTCPodtg91HsKf5xB1MQ5L13CkcSfd2rCV')"
+    "cluster_by_addr('LP1NaZDCBZY6CXpRJxG4FiJMffsrhoSHLY')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +593,7 @@
        "55"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
